bastion.tf
resource "aws_instance" "bastion" {
  ami                         = var.bastion_ami_value
  instance_type               = var.bastion_instance_type
  subnet_id                   = aws_subnet.public_a.id
  key_name                    = var.key_name
  vpc_security_group_ids      = [aws_security_group.bastion_sg.id]
  associate_public_ip_address = true

  tags = merge(local.common_tags, {
    Name = "${local.name_prefix}-bastion"
    Role = "Bastion"
  })
}
